@@ -4617,11 +4617,7 @@ void ReplaceSelectionCommand::doApply()
         }
         else {
             NodeImpl *node = document()->createEditingTextNode(nonBreakingSpaceString());
-            insertNodeAfter(node, m_lastNodeInserted);
-            if (!m_firstNodeInserted)
-                m_firstNodeInserted = node;
-            m_lastNodeInserted = node;
-            m_lastTopNodeInserted = node;
+            insertNodeAfterAndUpdateNodesInserted(node, m_lastNodeInserted);
             insertionPos = Position(node, 1);
         }
     }
@@ -4632,7 +4628,7 @@ void ReplaceSelectionCommand::doApply()
             insertTextIntoNode(text, 0, nonBreakingSpaceString());
         } else {
             NodeImpl *node = document()->createEditingTextNode(nonBreakingSpaceString());
-            insertNodeBefore(node, m_firstNodeInserted);
+            insertNodeBeforeAndUpdateNodesInserted(node, m_firstNodeInserted);
         }
     }
 
